# python-project-lvl3

./: .gitignore  Makefile  README.md  pyproject.toml  setup.cfg
.github/workflows/: test-and-linter.yml
page_loader/: __init__.py  filesystem_io.py  http_requests.py  loader.py  naming.py  parser.py  resource_loader.py
page_loader/scripts/: run_page_loader.py
tests/: test_cli.py  test_download.py  test_requests_mock_library.py  test_scratch.py
tests/fixtures/: webpage.html  webpage_result.html
tests/fixtures/page-loader.hexlet.repl.co/: page-loader-hexlet-repl-co.html
