[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = "CLI program that download a web page with all files and save it to computer."
authors = ["odhako <odhako@gmail.com>"]
packages = [
    {include = "page_loader"}
]

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.28.0"
beautifulsoup4 = "^4.11.1"
progress = "^1.6"

[tool.poetry.dev-dependencies]
flake8 = "^4.0.1"
pytest = "^7.1.2"
pytest-cov = "^3.0.0"
requests-mock = "^1.9.3"
cli-test-helpers = "^3.1.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
page-loader = "page_loader.scripts.run_page_loader:main"
